  no longer recommend that people do this. ``PHAB_ID=D174250``


Deprecations:

  * util-reflect: This library has been deprecated since it is legacy code and shouldn't
    be used for new services. We no longer think this facility is the right way to do it
    and encourage you to provide your own forwarders. ``PHAB_ID=D174250``

18.5.0  2018-05-07

Bug Fixes:

  * util-core: `c.t.concurrent.AsyncSemaphore` no longer completes promises while holding
    its intrinsic lock. ``PHAB_ID=D167434``

  * util-logging: Fix incorrect `loggerName` in `c.t.logging.ScribeHandler` which
    prevented the short-circuiting of publishing messages emitted from the ScribeHandler.
    ``PHAB_ID=D161552``

  * util-hashing: Add murmur3, a fast, non-cryptographic hashing function that
    is missing from hashing.
    ``PHAB_ID=D164915``

18.4.0  2018-04-10

New Features:

  * util-app: Add the ability to bind specific implementations for `LoadService.apply`
    via `App.loadServiceBindings`. ``PHAB_ID=D146554``

  * util-core: Introduce the `ClosableOnce` trait which extends the guarantees of
    `Closable` to include idempotency of the `close` method. ``PHAB_ID=D152000``

Runtime Behavior Changes:

  * util-app: Add visibility for NonFatal exceptions during exiting of `c.t.app.App`.
    Added visibility into any NonFatal exceptions which occur during the closing of
    resources during `App#close`. ``PHAB_ID=D146029``

  * util-core: Ensure the `Awaitable.CloseAwaitably0.closeAwaitably` Future returns.
    Because the `closed` AtomicBoolean is flipped, we want to make sure that executing
    the passed in `f` function satisfies the `onClose` Promise even the cases of thrown
    exceptions. ``PHAB_ID=D146565``

  * util-stats: Alphabetically sort stats printed to the given `PrintStream` in the
    `c.t.finagle.stats.InMemoryStatsReceiver#print(PrintStream)` function.

    To include stats headers which provide better visual separation for the different